[gd_scene load_steps=19 format=2]

[ext_resource path="res://Images/Dreams/GoodDreamsCharging.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GoodDreams/GoodDreamsCharging.gd" type="Script" id=2]
[ext_resource path="res://Images/Dreams/Good_Dreams.png" type="Texture" id=3]
[ext_resource path="res://Scenes/GoodDreams/GoodDreamsCharging.tres" type="Material" id=4]
[ext_resource path="res://Images/Dreams/DreamPointer.png" type="Texture" id=5]
[ext_resource path="res://SoundEffects/Perry_SEs Edit 1 Export 1.wav" type="AudioStream" id=6]
[ext_resource path="res://SoundEffects/Perry_SEs_Charging.ogg" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 52, 50 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 52, 0, 52, 50 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 104, 0, 52, 50 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 156, 0, 52, 50 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 175.368

[node name="GoodDreamsCharging" type="Node2D"]
modulate = Color( 1.3, 1.2, 1.3, 1 )
z_index = -1
script = ExtResource( 2 )

[node name="Ring1" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 2
playing = true

[node name="Ring2" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 2
playing = true
flip_h = true

[node name="Ring3" type="AnimatedSprite" parent="."]
rotation = 0.785398
frames = SubResource( 4 )
frame = 2
playing = true
flip_h = true

[node name="Ring4" type="AnimatedSprite" parent="."]
rotation = 0.785398
frames = SubResource( 4 )
frame = 2
playing = true

[node name="Ring5" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 2
playing = true
flip_h = true

[node name="Ring6" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 2
playing = true

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1.1, 1, 1.1, 1 )
material = SubResource( 5 )
z_index = -1
amount = 12
lifetime = 3.0
randomness = 0.3
process_material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="Pointer" type="AnimatedSprite" parent="."]
position = Vector2( 0, -185.836 )
frames = SubResource( 10 )
playing = true

[node name="ShootTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="DeathTween" type="Tween" parent="."]

[node name="ShootTween" type="Tween" parent="."]

[node name="DurationTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 6.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 0.5 )
z_index = -1
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 11 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -4.0
pitch_scale = 3.0
bus = "SoundEffects"

[node name="ChargingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
pitch_scale = 0.8
bus = "SoundEffects"

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="tween_all_completed" from="DeathTween" to="." method="_on_DeathTween_tween_all_completed"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
